--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1282,8 +1282,8 @@
     - 23831
     - 35300
     - 49290
-    - 50029
     - 49848
+    - 50029
   threshold: 100%
   metadata: &136
     title_ru: Девочка-волшебница Мадока★Волшебство
@@ -5135,11 +5135,17 @@
 - neko_id: mo_dao_zu_shi
   level: 1
   algo: duration
-  filters: 
+  filters: &539
     franchise: mo_dao_zu_shi
   threshold: 100%
-  metadata: 
+  metadata: &540
     title_ru: Магистр дьявольского культа
     title_en: Mo Dao Zu Shi
-    image: https://desu.shikimori.one/system/user_images/original/9560/1625433.jpg
+    image: "/assets/achievements/anime/franchise/mo_dao_zu_shi.jpg"
     topic_id: 247360
+- neko_id: mo_dao_zu_shi
+  level: 0
+  algo: duration
+  filters: *539
+  threshold: 0.01
+  metadata: *540
