supernatural_4.gif & police_4.gif

--- a/priv/rules/police.yml
+++ b/priv/rules/police.yml
@@ -50,5 +50,5 @@
     text_ru: Как вы себя чувствуете, забравшись так далеко?
     title_en: Top of the hierarchy
     text_en: How do you feel about getting this far?
-    image: https://cdn.discordapp.com/attachments/702401492564443180/906913212446961694/Kidou-Keisatsu-Patlabor-the-Movie-10.fps.gif
+    image: /assets/achievements/anime/police_4.gif
     border_color: "#c7d0cc"
