--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1066,6 +1066,7 @@
     image: "/assets/achievements/anime/franchise/black_clover.jpg"
     topic_id: 247360
   generator: &112
+    threshold: 100%
     ignore_latest_ids:
     - 48585
 - neko_id: black_clover
