--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -5213,3 +5213,14 @@
   filters: *547
   threshold: 0.01
   metadata: *548
+- neko_id: grisaia
+  level: 1
+  algo: duration
+  filters: 
+    franchise: grisaia
+  threshold: 100%
+  metadata: 
+    title_ru: Грисайя
+    title_en: Grisaia
+    image: https://nyaa.shikimori.one/system/user_images/original/607810/1746680.jpg
+    topic_id: 247360
