--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -2777,6 +2777,7 @@
     - 42476
     - 47413
     - 1369
+    - 9785
   threshold: 93.9%
   metadata: &292
     title_ru: Детектив Конан
@@ -5216,3 +5217,15 @@
   filters: *547
   threshold: 0.01
   metadata: *548
+- neko_id: demon_slayer
+  level: 1
+  algo: duration
+  filters: 
+    franchise: demon_slayer
+  threshold: 100%
+  metadata: 
+    title_ru: Клинок, рассекающий демонов
+    title_en: Kimetsu no Yaiba
+    image: https://nyaa.shikimori.one/system/user_images/original/607810/1653945.jpg
+    topic_id: 247360
+- neko_id: demon_slayer
