--- a/priv/rules/space.yml
+++ b/priv/rules/space.yml
@@ -7,7 +7,7 @@
     genre_ids:
       - 29
   metadata:
-    title_ru: 3–2–1... Пуск!
+    title_ru: 3–2–1... Поехали!
     text_ru: Маленький шаг для одного человека, но гигантский скачок для всего человечества.
     title_en: 3-2-1... Launch!
     text_en: That's one small step for man, one giant leap for mankind
