--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -4119,6 +4119,8 @@
   algo: duration
   filters: &432
     franchise: doupo_cangqiong
+    not_anime_ids:
+    - 47548
   threshold: 97%
   metadata: &433
     title_ru: Расколотая битвой синева небес
