--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -5292,3 +5292,14 @@
   filters: *553
   threshold: 0.01
   metadata: *554
+- neko_id: xingchen_bian
+  level: 1
+  algo: duration
+  filters: 
+    franchise: xingchen_bian
+  threshold: 100%
+  metadata:
+    title_ru: Дорогой звёзд
+    title_en: Xingchen Bian
+    image: https://dere.shikimori.one/system/user_images/original/45319/1830194.jpg
+    topic_id: 247360
