--- a/priv/rules/space.yml
+++ b/priv/rules/space.yml
@@ -42,7 +42,7 @@
   threshold: 100
   metadata:
     title_ru: Император галактики
-    text_ru: Вы правитель всей Вселенной. Неизменный и победоносный. Нет никого с большей силой, чем у вас.
+    text_ru: Вы правитель Вселенной. Неизменный и победоносный. Нет никого с большей силой, чем у вас.
     title_en: Emperor of the Galaxy
     text_en: You are the ruler of the entire universe. Unchanging and victorious. There is no one with more power than you.
     image: /assets/achievements/anime/space_4.gif
