stop_motion.yml

--- a/priv/rules/stop_motion.yml
+++ b/priv/rules/stop_motion.yml
@@ -387,8 +387,8 @@
   metadata:
     title_ru: Тонкая, однако, работа!
     text_ru: Давным-давно, в староглиняные времена, в одной пластилиновой местности… 
-    title_en: Subtle, however, work!
-    text_en: A long time ago, in the oldclay times, in one plasticine area...
+    title_en: Fine workmanship!
+    text_en: A long time ago, in the old-clay times, in a certain plasticine country...
     image: /assets/achievements/anime/stop_motion_1.jpg
     border_color: "#4E6144"
     topic_id: 459148
