--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1068,6 +1068,7 @@
     - 50696
     - 51162
     - 51163
+    - 52199
   threshold: 95.7%
   metadata: &112
     title_ru: Ван-Пис
@@ -5354,3 +5355,16 @@
   filters: *559
   threshold: 0.01
   metadata: *560
+- neko_id: kaguya_sama
+  level: 1
+  algo: duration
+  filters: 
+    franchise: kaguya_sama
+    not_anime_ids:
+    - 44270
+  threshold: 100%
+  metadata: 
+    title_ru: Госпожа Кагуя: в любви как на войне
+    title_en: Kaguya-sama wa Kokurasetai: Tensai-tachi no Renai Zunousen
+    image: https://nyaa.shikimori.one/system/user_images/original/498922/1859255.jpg
+    topic_id: 247360
