--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3647,6 +3647,7 @@
     franchise: major
     not_anime_ids:
     - 32324
+    - 52616
   threshold: 90%
   metadata: &381
     title_ru: Мэйджор
@@ -5234,6 +5235,8 @@
   algo: duration
   filters: &545
     franchise: konjiki_no_gash_bell
+    not_anime_ids:
+    - 52605
   threshold: 99.5%
   metadata: &546
     title_ru: Златовласый Гаш Белл
