generate 0 levels for new franchises, download new fracnhises images

--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -407,7 +407,7 @@
     title_en: Mob Psycho 100
     image: "/assets/achievements/anime/franchise/mob_psycho.jpg"
     topic_id: 247360
-  generator:
+  generator: &42
     threshold: 96.93%
     not_ignored_ids:
     - 36616
@@ -5495,26 +5495,38 @@
 - neko_id: jashin_chan_dropkick
   level: 1
   algo: duration
-  filters:
+  filters: &570
     franchise: jashin_chan_dropkick
     not_anime_ids:
     - 52006
   threshold: 100%
-  metadata:
+  metadata: &571
     title_ru: Дропкик злого духа
     title_en: Jashin-chan Dropkick
-    image: https://moe.shikimori.one/system/user_images/original/607810/1965487.jpg
+    image: "/assets/achievements/anime/franchise/jashin_chan_dropkick.jpg"
     topic_id: 247360
+- neko_id: jashin_chan_dropkick
+  level: 0
+  algo: duration
+  filters: *570
+  threshold: 0.01
+  metadata: *571
 - neko_id: kingdom
   level: 1
   algo: duration
-  filters:
+  filters: &572
     franchise: kingdom
     not_anime_ids:
     - 48877
   threshold: 100%
-  metadata:
+  metadata: &573
     title_ru: Царство
     title_en: Kingdom
-    image: https://nyaa.shikimori.one/system/user_images/original/45319/1963435.jpg
+    image: "/assets/achievements/anime/franchise/kingdom.jpg"
     topic_id: 247360
+- neko_id: kingdom
+  level: 0
+  algo: duration
+  filters: *572
+  threshold: 0.01
+  metadata: *573
